with new registration flow email screen

--- a/app/src/main/res/layout/activity_intro_new.xml
+++ b/app/src/main/res/layout/activity_intro_new.xml
@@ -17,32 +17,37 @@
         android:src="@drawable/sk_logo_black"
         />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".67">
+        android:layout_weight=".66"
+        android:weightSum="1"
+        android:orientation="vertical">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/a6_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".94"
        />
 
     <LinearLayout
             android:id="@+id/layoutDots"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dots_height_new"
-            android:layout_alignParentBottom="true"
-            android:gravity="center"
+            android:layout_height="0dp"
+            android:layout_weight=".06"
+            android:layout_gravity="top"
+            android:gravity="top|center_horizontal"
+        android:layout_marginBottom="@dimen/_10sdp"
             android:orientation="horizontal" />
 
-    </RelativeLayout>
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".27"
+        android:layout_weight=".28"
         android:layout_gravity="center"
-        android:gravity="center"
+        android:gravity="top"
        >
 
     <TextView
@@ -110,20 +115,22 @@
             android:layout_marginTop="@dimen/_5sdp">
 
             <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_fb"
                 android:layout_width="0dp"
                 android:layout_weight=".5"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginRight="@dimen/_5sdp"
                 android:textColor="@color/fb_color"
                 android:drawablePadding="10dp"
+                android:textAllCaps="false"
                 android:gravity="left|center_vertical"
                 android:paddingLeft="@dimen/_15sdp"
                 android:drawableLeft="@drawable/ic_facebook_logo_new"
                 android:background="@drawable/facebook_btn_border"
-                android:capitalize="words"
                 android:text="Facebook"/>
 
             <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_google"
                 android:layout_width="0dp"
                 android:layout_weight=".5"
                 android:layout_marginLeft="@dimen/_5sdp"
@@ -132,6 +139,7 @@
                 android:drawablePadding="10dp"
                 android:gravity="left|center_vertical"
                 android:paddingLeft="@dimen/_30sdp"
+                android:textAllCaps="false"
                 android:drawableLeft="@drawable/ic_gmail_new"
                 android:background="@drawable/gmail_btn_border"
                 android:capitalize="words"
