--- a/app/src/main/res/layout/registration_part_one_password.xml
+++ b/app/src/main/res/layout/registration_part_one_password.xml
@@ -17,17 +17,21 @@
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/img_back"
             android:layout_width="@dimen/top_bar_profile"
-            android:layout_height="@dimen/top_bar_profile"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:padding="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:paddingTop="@dimen/_12sdp"
+            android:paddingLeft="@dimen/_12sdp"
+            android:paddingRight="@dimen/_12sdp"
+            android:paddingBottom="@dimen/_2sdp"
             app:srcCompat="@drawable/ic_back_icon" />
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/iv_report"
             android:layout_width="@dimen/_180sdp"
-            android:layout_height="@dimen/top_bar_profile"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:padding="@dimen/_10sdp"
+            android:padding="@dimen/_5sdp"
             app:srcCompat="@drawable/sk_logo_black" />
 
     </RelativeLayout>
@@ -36,49 +40,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:padding="@dimen/_12sdp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/whats_your_email"
+            android:text="@string/whats_your_pass"
             android:textColor="@color/black"
-            android:textSize="@dimen/_20sdp"
+            android:textSize="@dimen/_19sdp"
             android:fontFamily="@font/raleway_medium"
+            android:textStyle="bold"
             />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="@string/we_need_it"
-            android:textColor="@color/dark_gray_new_reg"
-            android:textSize="@dimen/_14sdp"
-            android:fontFamily="@font/raleway_light"
-            />
+
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_25sdp"
             >
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/img_email"
-                android:layout_width="@dimen/_10sdp"
-                android:layout_height="@dimen/_10sdp"
+                android:layout_width="@dimen/_13sdp"
+                android:layout_height="@dimen/_13sdp"
                 android:layout_centerVertical="true"
-                app:srcCompat="@drawable/email_ico" />
+                app:srcCompat="@drawable/password_ico" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/img_email"
-                android:hint="Email Address"
+                android:hint="Enter Password"
                 android:textColorHint="@color/email_hint_new_reg"
+                android:textColor="@color/email_text_new_reg"
                 android:textSize="@dimen/_11sdp"
                 android:layout_centerVertical="true"
+                android:inputType="textPassword"
                 android:layout_marginLeft="@dimen/_10sdp"
+                android:backgroundTint="@color/transparent"
                 android:drawableTint="@color/transparent"/>
 
         </RelativeLayout>
@@ -93,9 +94,29 @@
     <android.support.v7.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/button_background_new_reg"
-        android:layout_margin="@dimen/_12sdp"
-        android:textColor="@color/button_text_new_reg"
-        android:text="Next"/>
+        android:background="@drawable/new_reg_btn_back_primary"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_12sdp"
+        android:layout_marginRight="@dimen/_12sdp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/roboto_medium"
+        android:text="Sign in"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:text="Forgot your password? "
+        android:textColor="@color/colorPrimaryDark_new"
+        android:layout_gravity="center"
+        android:fontFamily="@font/raleway_light"
+        android:gravity="center"/>
+
+    <CheckBox
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="I accept Term &amp; Conditions"
+        android:visibility="gone"
+        android:textColor="@color/colorPrimaryDark_new"/>
 
 </LinearLayout>
