--- a/app/src/main/res/layout/welcome_slide4_new.xml
+++ b/app/src/main/res/layout/welcome_slide4_new.xml
@@ -26,11 +26,13 @@
         android:textColor="@color/reward_day_color"
         android:textSize="@dimen/_12sdp"
         android:fontFamily="@font/roboto_regular"/>
-C
+
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="@dimen/_200sdp"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_5sdp"
+        android:layout_marginLeft="@dimen/_30sdp"
+        android:layout_marginRight="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:layout_gravity="center"
         android:src="@drawable/vp_slide4"/>
 
