--- a/app/src/main/res/layout/registration_part_one_password.xml
+++ b/app/src/main/res/layout/registration_part_one_password.xml
@@ -69,6 +69,7 @@
                 app:srcCompat="@drawable/password_ico" />
 
             <EditText
+                android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/img_email"
@@ -92,6 +93,7 @@
     </LinearLayout>
 
     <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btn_signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/new_reg_btn_back_primary"
