--- a/app/src/main/res/layout/registration_part_one_gender.xml
+++ b/app/src/main/res/layout/registration_part_one_gender.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -68,6 +67,7 @@
             >
 
             <android.support.v7.widget.CardView
+                android:id="@+id/cv_male"
                 android:layout_width="0dp"
                 android:layout_weight=".5"
                 android:layout_height="wrap_content"
@@ -76,13 +76,13 @@
                 app:cardCornerRadius="@dimen/_5sdp"
                 android:layout_margin="@dimen/_5sdp"
                 app:cardElevation="1dp">
-                
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="@dimen/_10sdp">
-                    
-                    
+
+
                     <ImageView
                         android:id="@+id/iv_male"
                         android:layout_width="@dimen/_60sdp"
@@ -92,6 +92,7 @@
 
 
                     <ImageView
+                        android:id="@+id/iv_male_chk"
                         android:layout_width="@dimen/_10sdp"
                         android:layout_height="@dimen/_10sdp"
                         android:layout_alignParentTop="true"
@@ -113,6 +114,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/cv_female"
                 android:layout_width="0dp"
                 android:layout_weight=".5"
                 android:layout_height="wrap_content"
@@ -137,6 +139,7 @@
 
 
                     <ImageView
+                        android:id="@+id/iv_female_chk"
                         android:layout_width="@dimen/_10sdp"
                         android:layout_height="@dimen/_10sdp"
                         android:layout_alignParentTop="true"
@@ -161,7 +164,7 @@
 
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_continue"
+            android:id="@+id/btn_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_40sdp"
