--- a/app/src/main/res/layout/registration_part_one_password.xml
+++ b/app/src/main/res/layout/registration_part_one_password.xml
@@ -105,6 +105,7 @@
         android:text="Sign in"/>
 
     <TextView
+        android:id="@+id/tv_forgot_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
@@ -115,6 +116,7 @@
         android:gravity="center"/>
 
     <CheckBox
+        android:id="@+id/cb_tnc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="I accept Term &amp; Conditions"
